Fix for BASE HREF not affecting applet bug 59430 patch by alexsavulov r=peterl sr=attinasi a=blizzard